1999-10-04  Roland McGrath  <roland@baalperazim.frob.com>

	* sysdeps/generic/memrchr.c: New file, adapted from memchr.c.
	* sysdeps/i386/bits/string.h (__memrchr): New function.
	* string/string.h: Declare memrchr, __memrchr.
	* manual/string.texi (Search Functions): Document memrchr.

1999-10-03  Ulrich Drepper  <drepper@cygnus.com>

	* configure.in: Accept --with-gd option and set all libgd-LDFLAGS,
	CFLAGS-memprofstat.c, and LIBGD variables.
	* config.make.in: Add LIBGD.
	* malloc/Makefile: Add rules to generate libmemprof.so and
	memprofstat.
	* malloc/memprof.c: New file.
	* malloc/memprofstat.c: New file.

1999-10-02  Ulrich Drepper  <drepper@cygnus.com>

	* resolv/nsap_addr.c (inet_nsap_addr): Little optimization.

	* resolv/inet_ntop.c (inet_ntop4): Little optimization.
	(inet_ntop6): Likewise.

	* resolv/inet_net_pton.c (inet_net_pton_ipv4): Prevent buffer
	overruns.

	* resolv/tst-aton.c (main): Add more tests.

	* resolv/inet_addr.c (inet_aton): Correct some problems with to
	large numbers.  Optimize a bit.

1999-10-01  Ulrich Drepper  <drepper@cygnus.com>

	* resolv/inet_net_ntop.c (inet_net_ntop_ipv4): If BITS is zero
	account for added '0'.

	* resolv/nss_dns/dns-host.c (_nss_dns_gethostbyaddr_r): Align
	handling of IPv6 tunnel address handling with bind 8.2.1.  Allow
	len argument to be greater than needed address size.

1999-10-01  Andreas Jaeger  <aj@suse.de>

	* locale/programs/ld-collate.c (insert_value): Add cast to avoid
	warning.
	* intl/finddomain.c (_nl_find_domain): Likewise.

1999-09-30  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/alpha/ioperm.c: Disable debug messages.

1999-09-30  Andreas Jaeger  <aj@suse.de>

	* sysdeps/i386/lshift.S: Correct assembler commands to fix warnings.
	* sysdeps/i386/rshift.S: Likewise.
	* sysdeps/i386/strchrnul.S: Likewise.
	* sysdeps/i386/strchr.S: Likewise.
	Patch by Michael Deutschmann <michael@talamasca.wkpowerlink.com>,
	PR libc/1339.

1999-09-30  Andreas Jaeger  <aj@suse.de>
