@@ -1,5 +1,10 @@
 1999-10-04  Roland McGrath  <roland@baalperazim.frob.com>
 
+	* misc/Makefile (routines): Add getloadavg.
+	* sysdeps/generic/getloadavg.c: New file.
+	* sysdeps/mach/getloadavg.c: New file.
+	* sysdeps/unix/sysv/linux/getloadavg.c: New file.
+
 	* sysdeps/generic/memrchr.c: New file, adapted from memchr.c.
 	* sysdeps/i386/bits/string.h (__memrchr): New function.
 	* string/string.h: Declare memrchr, __memrchr.
